--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,21 +17,21 @@
 <form class="create-form">
 
   <div class="form-group">
-    <textarea id="burger" name="burger" rows="8" cols="40"></textarea>
+    <textarea id="burger_name" name="burger_name" rows="8" cols="40"></textarea>
   </div>
 
   <button type="submit">Submit</button>
-  <label for="burgers">Enter a burger you want to eat! Click the "Submit" button.</label>
+  <label for="burger_name">Enter a burger you want to eat! Click the "Submit" button.</label>
 </form>
 
 
 <script type="text/javascript">
  
-  $("#addburger").on("submit", function(event) {
+  $(".create-form").on("submit", function(event) {
     event.preventDefault();
 
-    var newPlan = {
-      plan: $("#addburger [name=burger]").val().trim()
+    let newBurger = {
+      name: $("#burger_name").val().trim()
     };
 
     // Send the POST request.
@@ -41,31 +41,27 @@
     }).then(
       function() {
         console.log("added new burger");
- 
         location.reload();
       }
     );
   });
 
-  {{!-- $("#updateplan").on("submit", function(event) {
-    // Make sure to preventDefault on a submit event.
+  {{!-- $("#devburger").on("submit", function(event)  {
     event.preventDefault();
 
-    // Get the ID by finding an element with a "name" attribute equal to the string "id"
-    var id = $("[name=id]").val().trim();
+    let id = $("[name=id]").val().trim();
 
-    var updatedPlan = {
-      plan: $("#updateplan [name=plan]").val().trim()
+    let updatedPlan = {
+      plan: $("#devourburger [name=burger]").val().trim()
     };
 
     // Send the PUT request.
-    $.ajax("/api/plans/" + id, {
+    $.ajax("/api/burger/" + id, {
       type: "PUT",
-      data: updatedPlan
+      data: devourBurger
     }).then(
       function() {
-        console.log("updated id ", id);
-        // Reload the page to get the updated list
+        console.log("devoured ", id);
         location.reload();
       }
     );
