--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,8 @@
 		<script src="https://code.jquery.com/jquery.js"></script>
 	</head>
 	<body>
+        <img src="burger.png" alt="burger" /> 
 		{{{ body }}}
+        <a href='https://pngtree.com/so/burger-clipart'>burger-clipart png from pngtree.com</a>
 	</body>
 </html>
