--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
 <ul>
     {{#each burgers}}
     {{#if devoured}}
-    {{> burger/burger-block devoured=true}}
+    {{> burger/burger-block devoured=false}}
     {{/if}}
     {{/each}}
 </ul>
