Uploading what I have for yet another review

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,13 @@
 <h1>Eat-Da-Burger!</h1>
 
+<ul>
+  {{#each burgers}}
+    {{#unless devoured}}
+      {{> burger/burger-block devoured=true}}
+    {{/unless}}
+  {{/each}}
+</ul>
+
 {{!-- <ul>
     {{#each burgers}}
     
