Attempt to add Bootstrap

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 		<title>Eat Da Burger!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 	</head>
 	<body>
-        <img src="burger.png" alt="burger" /> 
+		{{!-- <div class="row"> --}}
+			{{!-- <div class="col-md-6"> --}}
+        <img src="burger.png" alt="burger" />
+			{{!-- </div>  --}}
+			{{!-- <div class="col.md-4"> --}}
 		{{{ body }}}
+			{{!-- </div> --}}
+		{{!-- </div> --}}
         <a href='https://pngtree.com/so/burger-clipart'>burger-clipart png from pngtree.com</a>
+		<script src="https://code.jquery.com/jquery.js"></script>
 	</body>
 </html>
