--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -4,13 +4,18 @@ body {
 
 h1{
     color: red;
-    text-align: center;
+    margin-left: 15%
+    /* text-align: center; */
 }
 
 img{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 7.5%;
+    /* margin-right: auto; */
+}
+
+.burger{
+width: 100%;
 }
 
 .btn{
@@ -19,32 +24,35 @@ img{
     text-align: center;
     display: block; 
     margin: 0 auto;
-    position: absolute;
-    left: 49%;
-    margin-right: -49%;
-    bottom: 10%
+    /* position: absolute; */
+    left: 10%;
+    /* margin-right: -49%;
+    bottom: 10%  */
 }
 
 textarea {
-    position: absolute;
-    left: 40%;
-    margin-right: -40%;
-    top: 60%;
+    position: relative;
+    /* text-align: center; */
+    left: 10%;
+    /* margin-right: -40%;
+    top: 60%; */
     
 }
 
 .text-two{
-    position: absolute;
-    left: 37%;
+    position: relative;
+    text-align: center;
+    /* left: 37%;
     margin-right: -37%;
-    bottom: 15%
+    bottom: 15% */
 }
 
 a{
-    position: absolute;
-    left: 43%;
+    position: relative;
+    padding: 15%;
+    /* left: 43%;
     margin-right: -43%;
-    top: 90%;
+    top: 90%; */
 }
 
 .devoured {
