--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,15 +7,10 @@
 		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 	</head>
 	<body>
-		{{!-- <div class="row"> --}}
-			{{!-- <div class="col-md-6"> --}}
-        <img src="burger.png" alt="burger" />
-			{{!-- </div>  --}}
-			{{!-- <div class="col.md-4"> --}}
+		
 		{{{ body }}}
-			{{!-- </div> --}}
-		{{!-- </div> --}}
-        <a href='https://pngtree.com/so/burger-clipart'>burger-clipart png from pngtree.com</a>
-		<script src="https://code.jquery.com/jquery.js"></script>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="/assets/js/script.js" type="text/javascript" ></script>
 	</body>
 </html>
